src/objects/PANG_Partnership__c.object
<CustomObject>
    <description>Used to track and manage Accounts with RWE Partnerships</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RWE Partnerships</relationshipLabel>
        <relationshipName>RWE_Partnerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S. Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia / CIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DataLoad_ID__c</fullName>
        <externalId>true</externalId>
        <label>DataLoad ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_This_Org_in_Other_RWE_Partnerships__c</fullName>
        <label>Is This Org in Other RWE Partnerships?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partnership_Expiration_Date__c</fullName>
        <label>Partnership Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partnership_Sponsor__c</fullName>
        <label>Partnership Sponsor</label>
        <picklist>
            <picklistValues>
                <fullName>SHIRLOC (Diabetes)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PROactive (USHO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RWE, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPORWE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partnership_Start_Date__c</fullName>
        <label>Partnership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partnership_Status__c</fullName>
        <label>Partnership Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved by RWE Partnership Gov Cmte and Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by RWE Partnership Gov Cmte and Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exploring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluated and Not Pursued</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Therapeutic_Area__c</fullName>
        <label>Primary Therapeutic Area</label>
        <picklist>
            <picklistValues>
                <fullName>Cardiovascular</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Alzheimer&apos;s &amp; Neurodegenerative Diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatry &amp; Pain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autoimmune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bone, Muscle, Joint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Business Unit-Specific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Therapeutic_BU__c</fullName>
        <description>Autopopulates the Primary Therapeutic Business Unit based on the Primary Therapeutic Area selected</description>
        <formula>CASE(  Primary_Therapeutic_Area__c  , &quot;Oncology&quot;, &quot;Oncology&quot;, &quot;Diabetes&quot;, &quot;Diabetes&quot;, &quot;Biomedicines&quot;)</formula>
        <inlineHelpText>Autopopulates the Primary Therapeutic Business Unit based on the Primary Therapeutic Area selected</inlineHelpText>
        <label>Primary Therapeutic BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Partnership_Not_Pursued__c</fullName>
        <label>Reason Partnership Not Pursued</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_Makes_it_Unique__c</fullName>
        <label>What Makes it Unique</label>
        <type>TextArea</type>
    </fields>
    <label>RWE Partnership</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Partnership_Status__c</columns>
        <columns>Is_This_Org_in_Other_RWE_Partnerships__c</columns>
        <columns>Reason_Partnership_Not_Pursued__c</columns>
        <columns>Partnership_Start_Date__c</columns>
        <columns>Partnership_Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All  RWE Partnerships</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllApprovedRWEPartnerships</fullName>
        <columns>NAME</columns>
        <columns>Partnership_Status__c</columns>
        <columns>Is_This_Org_in_Other_RWE_Partnerships__c</columns>
        <columns>Reason_Partnership_Not_Pursued__c</columns>
        <columns>Partnership_Start_Date__c</columns>
        <columns>Partnership_Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partnership_Status__c</field>
            <operation>equals</operation>
            <value>Approved by RWE Partnership Gov Committee</value>
        </filters>
        <label>All Approved RWE Partnerships</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>RWE Partner</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RWE Partnerships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>